$Id$

2000.6.15
  * add CList.set_cell_style/set_row_style
  * change set_usize/set_uposition into set_geometry
  * return an option rather than raise an exception for null pointers
  * map empty strings to NULL when meaningful

2000.6.14
  * add GDraw.optcolor for functions with a default (Jerome suggested)

2000.6.8
  * apply Jerome Vouillon's patch
  * changes in GtkSignal and GtkArgv.ml

2000.6.7
  * create #misc#connect for widget generic signals

2000.6.6
  * move notebook from GMisc to GPack
  * #connect#event, #add_event, #misc#event, #misc#set_events_extension
    transferred to #event su-bobject.
  * #connect#drag -> #drag#connect.
  * #get_type, #connect#disconnect, #connect#stop_emit transferred to #misc.

2000.5.25
  * split misc.ml into gaux.ml and gpointer.ml

2000.5.23
  * add GMisc.notebook#get_{tab,menu}_label. Rename nth_page to get_nth_page.
  * modified ML signals in GUtil, to allow signals without widget.

2000.5.22
  * Incompatible!: Change default for ~expand in Box.pack,
    Pack.build_options, Table.build_options. Now defaults to false/`NONE.
    This means that all options default to false/`NONE, except ~show
    (true for all widgets except windows) and ~fill (always true but
    effect controlled by ~expand).
  * add GtkArgv.get_nativeint and GtkArgv.set_nativeint.
  * make offset and length optional in GtkArgv.string_at_pointer.

2000.5.10
  * rename GtkFrame to GtkBin and GFrame to GBin
  * move socket to GBin

2000.5.9
  * add arrow and image classes to GMisc
  * add list and set_item_string methods to GEdit.combo
  * add socket and plug classes to GContainer and GWindow
  * two new examples: combo.ml and socket.ml

2000.4.28
  * add GUtil.variable

2000.4.27
  * add GtkXmHTML widget

2000.4.26
  * release 1.00

2000.4.24
  * merge in changes for ocaml 3.00: label and syntax changes, autolink
  * added better visual and colormap handling to Gdk
  * GdkObj renamed to GDraw, GtkPixmap moved to GMisc