@@ -102,8 +102,8 @@ Structure of the G[A-Z]* modules:
   While subtyping follows the Gtk widget hierarchy, you cannot always
   use width subtyping (i.e. #super is not unifiable with all the
   subclasses of super). Still, it works for some classes, like
-  container, and allows subtyping without coercion towards these classes
-  (cf. #container in pousse.ml for instance).
+  #widget and #container, and allows subtyping without coercion towards
+  these classes (cf. #container in pousse.ml for instance).
 
   Practically, each widget class is composed of:
   * a coerce method, returning the object coerced to the type widget.
